# AI_agentNPA

./: .gitignore  CLAUDE.md  RAG_DEVELOPMENT.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/core/: chunking.py  embeddings.py  generation.py  parsing.py  query_classifier.py  reranker.py  retrieval.py  verification.py
backend/app/graph/: rag_graph.py
backend/app/models/: schemas.py
backend/app/prompts/: system.py
backend/bot/: handlers.py  main.py
backend/eval/: dataset.yaml  metrics.py  runner.py  schemas.py
backend/eval/results/: api_run_20260425_212624.json  baseline_20260425_205719.json  tg_run_20260427_164534.json  v10_hyde_20260427_001216.json  v11_fulltext_rerank_20260427_003415.json  v12_docprefix_20260427_013712.json  v12_docprefix_20260427_014559.json  v13_bm25fix_20260427_022521.json  v13_bm25fix_20260427_022645.json  v14_anchors_20260427_024528.json  v15_anchors2_20260427_082737.json  v1_threshold_and_topk_20260425_215914.json  v1_threshold_and_topk_20260425_220502.json  v1_threshold_and_topk_20260425_221203.json  v2_hybrid_20260426_154543.json  v3_hybrid_20260426_161723.json  v4_phase1_20260426_215728.json  v5_multiquery_20260426_222851.json  v5_multiquery_20260426_223036.json  v6_dedup_20260426_225311.json  v7_doclevel_20260426_231345.json  v8_rerank20_20260426_233214.json  v9_topk100_20260426_234926.json
backend/scripts/: add_anchors.py  add_doc.py  ingest.py  upload_snapshot.py
docs/: architecture.md  deployment.md  eval.md  quickstart.md
eval/: ITERATIONS.md  runner.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
НПА/: 1. Соглашение о единых принципах и правилах обращения МИ.docx  11. Решение №173 от 22.12. 2015 г..docx  12. Решение №177  от 29.12. 2015 г..docx  13. Решение №62 от 16.04. 2019 г..docx  14. Решение №42 от 12.02.2016 г..docx  15. Кодекс О здоровье народа и системе здравоохранения.docx  16. Приказ МЗ РК от 20.12.2020 г. № ҚР ДСМ-282 2020.docx  17. Приказ МЗ РК от 23.12.2020 г. № ҚР ДСМ-315 2020.docx  18. Приказ МЗ РК от 11.12.2020 г. № ҚР ДСМ-255 2020.docx  19. Приказ МЗ РК от 21 .12.2020 г.  № ҚР ДСМ-298 2020.docx  2. Решение №46 от 12.02.2016 г..docx  20. Приказ МЗ РК №248.docx  3. Решение №174 от 22.12. 2015 г..docx  (+13 more)
(+18 files in other folders)
